--- a/web/index.html
+++ b/web/index.html
@@ -3,12 +3,34 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
-    <title>Riff</title>
+    <title>Riff - Fediverse Social App</title>
+
+    <!-- SEO Meta Tags -->
+    <meta name="description" content="Riff is a Fediverse social app. Connect with people across the decentralized social web using ActivityPub." />
+    <meta name="keywords" content="fediverse, activitypub, social, decentralized, mastodon, federation" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Riff - Fediverse Social App" />
+    <meta property="og:description" content="Connect with people across the decentralized social web using ActivityPub." />
+    <meta property="og:image" content="/icon-512.png" />
+    <meta property="og:site_name" content="Riff" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="Riff - Fediverse Social App" />
+    <meta name="twitter:description" content="Connect with people across the decentralized social web using ActivityPub." />
+    <meta name="twitter:image" content="/icon-512.png" />
+
+    <!-- Favicons -->
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="manifest" href="/manifest.json" />
+
+    <!-- PWA / Mobile -->
     <meta name="theme-color" content="#0f0f0f" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
