--- a/web/index.html
+++ b/web/index.html
@@ -3,24 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
-    <title>Riff - Fediverse Social App</title>
+    <title>Riff - Part of Something Bigger</title>
 
     <!-- SEO Meta Tags -->
-    <meta name="description" content="Riff is a Fediverse social app. Connect with people across the decentralized social web using ActivityPub." />
-    <meta name="keywords" content="fediverse, activitypub, social, decentralized, mastodon, federation" />
+    <meta name="description" content="A friendly entry point to the fediverse. Sign up once, connect with millions across the open social web." />
+    <meta name="keywords" content="fediverse, activitypub, social, decentralized, mastodon, federation, social network" />
     <meta name="robots" content="index, follow" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Riff - Fediverse Social App" />
-    <meta property="og:description" content="Connect with people across the decentralized social web using ActivityPub." />
+    <meta property="og:title" content="Riff - Part of Something Bigger" />
+    <meta property="og:description" content="A friendly entry point to the fediverse. Sign up once, connect with millions across the open social web." />
     <meta property="og:image" content="/icon-512.png" />
     <meta property="og:site_name" content="Riff" />
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary" />
-    <meta name="twitter:title" content="Riff - Fediverse Social App" />
-    <meta name="twitter:description" content="Connect with people across the decentralized social web using ActivityPub." />
+    <meta name="twitter:title" content="Riff - Part of Something Bigger" />
+    <meta name="twitter:description" content="A friendly entry point to the fediverse. Sign up once, connect with millions across the open social web." />
     <meta name="twitter:image" content="/icon-512.png" />
 
     <!-- Favicons -->
